--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "sharp": "^0.34.1",
+    "spacy": "^0.0.4",
     "swagger-ui-express": "^5.0.1",
     "tesseract.js": "^6.0.1",
     "yamljs": "^0.3.0"
