--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.8.4",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "expo": "~49.0.0",
+    "expo": "^53.0.9",
     "expo-image-picker": "~14.4.0",
     "expo-linear-gradient": "~12.2.0",
     "express": "^5.1.0",
